[gd_scene load_steps=3 format=3 uid="uid://c3usg1dw2yqtt"]

[ext_resource type="Script" path="res://Scenes/victory_screen.gd" id="1_fxl3f"]
[ext_resource type="Texture2D" uid="uid://dwkqq0vvjc80s" path="res://Assets/Images/Dungeon.png" id="1_iutkj"]

[node name="VictoryScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fxl3f")

[node name="Dungeon" type="Sprite2D" parent="."]
position = Vector2(45, 45.5)
scale = Vector2(1, 1.43125)
texture = ExtResource("1_iutkj")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.0
offset_top = -3.0
offset_right = 32.0
offset_bottom = 35.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 9
text = "Congratulations!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Info" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.0
offset_top = -45.0
offset_right = 44.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 7
text = "You have felled the grim beast

Thanks for playing!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Info2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = 13.0
offset_right = 43.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 5
text = "Play again to unlock all actions
(keeps current actions)"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 119.0
offset_right = -5.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "PLAY AGAIN"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "QUIT GAME"

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
